updated question JSON format