@@ -1,7 +1,10 @@
 package org.uni.lu.quizselectorgame.repository.questions;
 
 import com.google.gson.Gson;
+import com.google.gson.FieldNamingPolicy;
+import com.google.gson.GsonBuilder;
 import com.google.gson.reflect.TypeToken;
+import com.google.gson.JsonSyntaxException;
 import jakarta.annotation.Nullable;
 import org.uni.lu.quizselectorgame.enums.QuestionOption;
 import org.uni.lu.quizselectorgame.enums.ScoreMovementType;
@@ -13,17 +16,24 @@ import java.io.File;
 import java.io.IOException;
 import java.lang.reflect.Type;
 import java.nio.file.Files;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Locale;
+import java.util.Map;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
 public class QuestionRepository {
 
+    private static final Gson GSON = new GsonBuilder()
+            .setFieldNamingPolicy(FieldNamingPolicy.LOWER_CASE_WITH_UNDERSCORES)
+            .create();
     private final Logger logger = Logger.getLogger(QuestionRepository.class.getName());
-    private final List<Question> questionList = new ArrayList<>();
+    private final Map<Integer, Question> questionById = new HashMap<>();
 
     public QuestionRepository() {
-        this(true);
+        this(false);
     }
 
     public QuestionRepository(boolean createDummyQuestion) {
@@ -31,71 +41,86 @@ public class QuestionRepository {
             createDummyQuestions();
         } else {
             //read JSON data
-            boolean jsonDataRead = false;
             File directory = new File("Questions/");
-            if (directory.exists()) {
-                File[] jsonFiles = directory.listFiles((_, name) -> name.toLowerCase(Locale.ROOT).endsWith("json"));
+            if (directory.exists() && directory.isDirectory()) {
+                File[] jsonFiles = directory.listFiles((_, name) -> name.toLowerCase(Locale.ROOT).endsWith(".json"));
                 if (jsonFiles != null) {
+                    questionById.clear();
+
                     for (File jsonFile : jsonFiles) {
                         try {
-                            String jsonRead = new String(Files.readAllBytes(jsonFile.toPath()));
-                            Gson gson = new Gson();
+                            String jsonRead = Files.readString(jsonFile.toPath());
                             Type listType = new TypeToken<List<QuestionJson>>() {
                             }.getType();
-                            List<QuestionJson> questionJsons = gson.fromJson(jsonRead, listType);
+                            List<QuestionJson> questionJsons = GSON.fromJson(jsonRead, listType);
 
                             questionJsons.forEach(qj -> {
-                                if (qj.getAnswers() != null && qj.getAnswers().size() == 2) {
-                                    AnswerJson answerOneJson = qj.getAnswers().getFirst();
-                                    AnswerJson answerTwoJson = qj.getAnswers().getLast();
-                                    Question question = new Question(qj.getLabel(), answerOneJson.getLabel(), answerTwoJson.getLabel());
-                                    if (answerOneJson.getScore() != null) {
-                                        Map<ScoreMovementAmount, List<ScoreType>> scoreMovementAmountListMap = new HashMap<>();
-                                        ScoreMovementAmount scoreMovementAmountAware = parseScoreValue(answerOneJson.getScore().getAWARENESS_AND_COMPLIANCE());
-                                        if (scoreMovementAmountAware != null) {
-                                            scoreMovementAmountListMap.putIfAbsent(scoreMovementAmountAware, new ArrayList<>());
-                                            scoreMovementAmountListMap.get(scoreMovementAmountAware).add(ScoreType.AWARENESS_AND_COMPLIANCE);
-                                        }
-
-                                        ScoreMovementAmount scoreMovementAmountEmp = parseScoreValue(answerOneJson.getScore().getEMPLOYEE_MANAGEMENT());
-                                        if (scoreMovementAmountEmp != null) {
-                                            scoreMovementAmountListMap.putIfAbsent(scoreMovementAmountEmp, new ArrayList<>());
-                                            scoreMovementAmountListMap.get(scoreMovementAmountEmp).add(ScoreType.EMPLOYEE_MANAGEMENT);
-                                        }
-
-
-
-                                        /*answerOneJson.getScore().
-                                        scoreMovementAmountListMap.
-                                        ScoreChange scoreChange = new ScoreChange(QuestionOption.OPTION_ONE, );
-                                        question.setOptionOneScoreChange();*/
-                                    }
-
-
-
-
-
-
-                                    questionList.add(question);
-                                } else {
-                                    logger.log(Level.SEVERE, qj.getqIndex() + " is an invalid question");
+                                if (qj.getQuestionId() == null) {
+                                    logger.log(Level.SEVERE, "Question without qIndex found in " + jsonFile.getName());
+                                    return;
                                 }
+
+                                if (qj.getAnswers() == null || qj.getAnswers().size() != 2) {
+                                    logger.log(Level.SEVERE, qj.getQuestionId() + " is an invalid question");
+                                    return;
+                                }
+
+                                AnswerJson answerOneJson = qj.getAnswers().getFirst();
+                                AnswerJson answerTwoJson = qj.getAnswers().getLast();
+                                Question question = new Question(qj.getLabel(), answerOneJson.getLabel(), answerTwoJson.getLabel());
+                                question.setOptionOneScoreChange(buildScoreChange(QuestionOption.OPTION_ONE, answerOneJson.getScore()));
+                                question.setOptionTwoScoreChange(buildScoreChange(QuestionOption.OPTION_TWO, answerTwoJson.getScore()));
+                                question.setFollowUpQuestionIdOptionOne(answerOneJson.getFollowUpQuestionId());
+                                question.setFollowUpQuestionIdOptionTwo(answerTwoJson.getFollowUpQuestionId());
+
+                                questionById.put(qj.getQuestionId(), question);
                             });
-                            jsonDataRead = true;
+
                         } catch (IOException e) {
                             logger.log(Level.WARNING, e.getMessage());
                         }
                     }
                 }
             }
-            if (!jsonDataRead || questionList.isEmpty()) {
+
+            if (questionById.isEmpty()) {
+                logger.log(Level.SEVERE, "No questions were loaded from JSON");
                 createDummyQuestions();
             }
         }
     }
 
+    private ScoreChange buildScoreChange(QuestionOption option, ScoreJson scoreJson) {
+        Map<ScoreMovementAmount, List<ScoreType>> scoreMovementAmountListMap = new HashMap<>();
+        if (scoreJson == null) {
+            return new ScoreChange(option, scoreMovementAmountListMap);
+        }
+
+        addScoreMovement(scoreMovementAmountListMap, scoreJson.getEmployeeManagement(), ScoreType.EMPLOYEE_MANAGEMENT);
+        addScoreMovement(scoreMovementAmountListMap, scoreJson.getLogicalAccess(), ScoreType.LOGICAL_ACCESS);
+        addScoreMovement(scoreMovementAmountListMap, scoreJson.getAwarenessAndCompliance(), ScoreType.AWARENESS_AND_COMPLIANCE);
+        addScoreMovement(scoreMovementAmountListMap, scoreJson.getInformationSystem(), ScoreType.INFORMATION_SYSTEM);
+        addScoreMovement(scoreMovementAmountListMap, scoreJson.getLocalAreaNetwork(), ScoreType.LOCAL_AREA_NETWORK);
+        addScoreMovement(scoreMovementAmountListMap, scoreJson.getThirdPartyManagement(), ScoreType.THIRD_PARTY_MANAGEMENT);
+
+        return new ScoreChange(option, scoreMovementAmountListMap);
+    }
+
+    private void addScoreMovement(Map<ScoreMovementAmount, List<ScoreType>> scoreMovementAmountListMap, String value, ScoreType scoreType) {
+        ScoreMovementAmount scoreMovementAmount = parseScoreValue(value);
+        if (scoreMovementAmount == null) {
+            return;
+        }
+        scoreMovementAmountListMap.putIfAbsent(scoreMovementAmount, new ArrayList<>());
+        scoreMovementAmountListMap.get(scoreMovementAmount).add(scoreType);
+    }
+
     @Nullable
     private ScoreMovementAmount parseScoreValue(String value) {
+        if (value == null || value.isBlank()) {
+            return null;
+        }
+
         ScoreMovementType scoreMovementType;
         if (value.contains("-")) {
             scoreMovementType = ScoreMovementType.DECREASE;
@@ -104,8 +129,13 @@ public class QuestionRepository {
             scoreMovementType = ScoreMovementType.INCREASE;
             value = value.replace("+", "");
         }
+
         try {
-            return new ScoreMovementAmount(scoreMovementType, Integer.parseInt(value));
+            int amount = Integer.parseInt(value.trim());
+            if (amount == 0) {
+                return null;
+            }
+            return new ScoreMovementAmount(scoreMovementType, amount);
         } catch (Exception e) {
             logger.log(Level.FINE, "Error parsing string " + value);
         }
@@ -113,6 +143,7 @@ public class QuestionRepository {
     }
 
     private void createDummyQuestions() {
+        /*
         Map<ScoreMovementAmount, List<ScoreType>> optionOneScoreMovementType = new HashMap<>();
         ScoreMovementAmount scoreMovementAmount = new ScoreMovementAmount(ScoreMovementType.INCREASE, 2);
         ScoreMovementAmount scoreMovementAmountDecrease = new ScoreMovementAmount(ScoreMovementType.DECREASE, 1);
@@ -129,17 +160,25 @@ public class QuestionRepository {
         Map<ScoreMovementAmount, List<ScoreType>> optionTwoScoreMovementType = new HashMap<>();
         optionTwoScoreMovementType.put(scoreMovementAmountDecrease, Arrays.asList(ScoreType.LOGICAL_ACCESS, ScoreType.EMPLOYEE_MANAGEMENT));
         ScoreChange optionTwoScoreChange = new ScoreChange(QuestionOption.OPTION_TWO, optionTwoScoreMovementType);
-        hotelConnectQuestion.setFollowUpQuestionOptionTwo(new Question(
+        Question vpnQuestion = new Question(
                 "Are you using a VPN?",
                 "Yes",
                 "No",
                 new ScoreChange(QuestionOption.OPTION_ONE, new HashMap<>()),
-                optionTwoScoreChange));
+            optionTwoScoreChange);
+        hotelConnectQuestion.setFollowUpQuestionIdOptionTwo(2);
 
-        questionList.add(hotelConnectQuestion);
+        questionById.clear();
+        questionById.put(1, hotelConnectQuestion);
+        questionById.put(2, vpnQuestion);
+        */
     }
 
-    public Question getQuestionAtIndex(int index) {
-        return questionList.get(index);
+    public Question getQuestionById(int questionId) {
+        return questionById.get(questionId);
+    }
+
+    public Question getFirstQuestion() {
+        return questionById.keySet().stream().sorted().findFirst().map(questionById::get).orElse(null);
     }
 }
